[package]
name = "rlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = "0.11.24"
rsa = "0.9.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = "1.36.0"
tracing = "0.1"
tracing-subscriber = "0.3"
influxdb = { version = "0.7.1", features = ["derive"] }
rand = "0.8.5"
